Prevent opt out info from overflowing in full width elements
Align the info button with the right side of the content element if
the content element uses position "full".

REDMINE-17863

--- a/entry_types/scrolled/package/src/frontend/thirdPartyConsent/OptOutInfo.module.css
+++ b/entry_types/scrolled/package/src/frontend/thirdPartyConsent/OptOutInfo.module.css
@@ -38,6 +38,10 @@
   right: -5px;
 }
 
+.optOut.full {
+  right: 0;
+}
+
 .optOut.bottom-25 {
   bottom: 25%;
 }
